# Translator-Bot

./: .gitignore  .pre-commit-config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yaml
cogs/: allowflag.py  channellanguage.py  defaultlanguage.py  donation.py  faq.py  help.py  invite.py  langinfo.py  languagelist.py  linkchannels.py  message_commands.py  message_translator.py  personal.py  reaction_language.py  resetsettings.py  reverse.py  serverstats.py  stats.py  support.py  support_listener.py  translate.py  translatechoice.py
