[project]
name = "translator-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.10.10",
    "aiosqlite>=0.20.0",
    "flpc>=0.2.5",
    "googletrans",
    "httpcore>=1.0.6",
    "httpx-socks[asyncio]>=0.9.1",
    "httpx[http2]>=0.27.2",
    "py-cord>=2.6.1",
    "python-dotenv>=1.0.1",
]

[tool.uv.sources]
googletrans = { git = "https://github.com/UnBonWhisky/googletrans.git" }
